fix: add cors headers